copy right section add

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<input placeholder="0" type="text" name="" id="user-input">
 				</div>
 				<div>
-					<button id="clear" class="c">C</button><!-- -------------><button id="back-button" 
+					<button id="clear" class="c">C</button><!-- -------------><button id="back-button"
 						class="ce">→</button><button class="numbers" value="/">÷</button><button class="numbers"
 						value="*">×</button>
 				</div>
@@ -50,7 +50,9 @@
 			</div>
 		</section>
 	</main>
-
+	<footer>
+		<p style="text-align: center;">Copyright © 2021 by Shariful islam</p>
+	</footer>
 
 
 
