one section added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</section>
 	</main>
 	<footer>
-		<p style="text-align: center;">Copyright © 2021 by Shariful islam</p>
+		<p style="text-align: center;">Copyright © 2021 By Shariful Islam</p>
 	</footer>
 
 
